--- a/src/components/Option/option.scss
+++ b/src/components/Option/option.scss
@@ -11,7 +11,8 @@
     padding: 1.5rem;
     border-radius: 5px;
   }
-  button {
+  button,
+  a {
     padding: 1rem 1.5rem;
     color: white;
     background-color: rgba(255, 255, 255, 0.247);
@@ -20,12 +21,25 @@
     margin: 0 1rem;
     cursor: pointer;
   }
-  button:hover {
+  button:hover,
+  a:hover {
     background-color: rgba(0, 0, 0, 0.089);
   }
-  .button-wrap {
+  .button-container {
     display: flex;
     justify-content: center;
+  }
+  .button-wrap {
+    position: relative;
+  }
+  .picker-wrap {
+    position: absolute;
+    top: 60px;
+    left: 10px;
+  }
+  a {
+    text-decoration: none;
+    font-size: 0.85rem;
   }
 }
 
