폰트 & 배경이미지업로드로 변경

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;700&display=swap");
+
 body {
   padding: 0;
   margin: 0;
   background-color: #333;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 * {
