--- a/src/components/Option/option.scss
+++ b/src/components/Option/option.scss
@@ -33,6 +33,7 @@
     position: relative;
   }
   .picker-wrap {
+    z-index: 100;
     position: absolute;
     top: 60px;
     left: 10px;
@@ -40,6 +41,9 @@
   a {
     text-decoration: none;
     font-size: 0.85rem;
+  }
+  input::placeholder {
+    color: rgba(255, 255, 255, 0.603);
   }
 }
 
